--- a/Scrap&Extract.ipynb
+++ b/Scrap&Extract.ipynb
@@ -57,7 +57,7 @@
    "id": "930937d4",
    "metadata": {},
    "source": [
-    "542 PDF qui sont soit des PCF (Porduct carbon footprint) concernant des PC, soit des PCF concernant des écrans (monitors) de la marque HP. Ces PDF sont directement récupérer sur leur site via une méthode de scrapping dont le code est ci dessous. Ca se passe en 2 étapes : on recupere les liens pdf dans un objet, puis on les télécharge."
+    "Un total de 542 fichiers PDF ont été collectés. Il s'agit de fiches PCF (Product Carbon Footprint) portant sur des ordinateurs ou des écrans (moniteurs) de la marque HP. Ces documents ont été récupérés directement depuis le site officiel de HP à l’aide d’une méthode de web scraping, dont le code est présenté ci-dessous. Le processus s’effectue en deux étapes : d’abord, les liens vers les fichiers PDF sont extraits et stockés dans un objet ; ensuite, les fichiers sont téléchargés localement."
    ]
   },
   {
@@ -195,7 +195,7 @@
    "id": "8ee61f12-9a78-4b2f-8850-78c368591c15",
    "metadata": {},
    "source": [
-    "### 3.1 Téléchargement des pc"
+    "### 3.1 Téléchargement des PC"
    ]
   },
   {
